# IPAY

./: .gitignore  CMakeLists.txt  README.md  config.ini  ipay.qrc  main.cpp
Algo/: CMakeLists.txt
Algo/PredictionClient/: CMakeLists.txt  PredictionClient.cc  PredictionClient.h
Algo/proto/: CMakeLists.txt
Algo/proto/tensorflow/core/example/: example.grpc.pb.cc  example.grpc.pb.h  example.pb.cc  example.pb.h  example_parser_configuration.grpc.pb.cc  example_parser_configuration.grpc.pb.h  example_parser_configuration.pb.cc  example_parser_configuration.pb.h  feature.grpc.pb.cc  feature.grpc.pb.h  feature.pb.cc  feature.pb.h
Algo/proto/tensorflow/core/framework/: allocation_description.grpc.pb.cc  allocation_description.grpc.pb.h  allocation_description.pb.cc  allocation_description.pb.h  api_def.grpc.pb.cc  api_def.grpc.pb.h  api_def.pb.cc  api_def.pb.h  attr_value.grpc.pb.cc  (+115 more)
Algo/proto/tensorflow_serving/apis/: classification.grpc.pb.cc  classification.grpc.pb.h  classification.pb.cc  classification.pb.h  get_model_metadata.grpc.pb.cc  get_model_metadata.grpc.pb.h  get_model_metadata.pb.cc  get_model_metadata.pb.h  get_model_status.grpc.pb.cc  get_model_status.grpc.pb.h  get_model_status.pb.cc  get_model_status.pb.h  inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  input.grpc.pb.cc  input.grpc.pb.h  input.pb.cc  input.pb.h  logging.grpc.pb.cc  logging.grpc.pb.h  logging.pb.cc  logging.pb.h  model.grpc.pb.cc  model.grpc.pb.h  model.pb.cc  model.pb.h  model_management.grpc.pb.cc  model_management.grpc.pb.h  model_management.pb.cc  model_management.pb.h  model_service.grpc.pb.cc  model_service.grpc.pb.h  model_service.pb.cc  model_service.pb.h  predict.grpc.pb.cc  predict.grpc.pb.h  predict.pb.cc  predict.pb.h  (+20 more)
Algo/proto/tensorflow_serving/config/: file_system_storage_path_source.grpc.pb.cc  file_system_storage_path_source.grpc.pb.h  file_system_storage_path_source.pb.cc  file_system_storage_path_source.pb.h  log_collector_config.grpc.pb.cc  log_collector_config.grpc.pb.h  log_collector_config.pb.cc  log_collector_config.pb.h  logging_config.grpc.pb.cc  logging_config.grpc.pb.h  logging_config.pb.cc  logging_config.pb.h  model_server_config.grpc.pb.cc  model_server_config.grpc.pb.h  model_server_config.pb.cc  model_server_config.pb.h  monitoring_config.grpc.pb.cc  monitoring_config.grpc.pb.h  monitoring_config.pb.cc  monitoring_config.pb.h  platform_config.grpc.pb.cc  platform_config.grpc.pb.h  platform_config.pb.cc  platform_config.pb.h  ssl_config.grpc.pb.cc  ssl_config.grpc.pb.h  ssl_config.pb.cc  ssl_config.pb.h
Algo/proto/tsl/protobuf/: coordination_config.grpc.pb.cc  coordination_config.grpc.pb.h  coordination_config.pb.cc  coordination_config.pb.h  coordination_service.grpc.pb.cc  coordination_service.grpc.pb.h  coordination_service.pb.cc  coordination_service.pb.h  distributed_runtime_payloads.grpc.pb.cc  distributed_runtime_payloads.grpc.pb.h  distributed_runtime_payloads.pb.cc  distributed_runtime_payloads.pb.h  dnn.grpc.pb.cc  dnn.grpc.pb.h  dnn.pb.cc  dnn.pb.h  error_codes.grpc.pb.cc  error_codes.grpc.pb.h  error_codes.pb.cc  error_codes.pb.h  histogram.grpc.pb.cc  histogram.grpc.pb.h  histogram.pb.cc  histogram.pb.h  rpc_options.grpc.pb.cc  rpc_options.grpc.pb.h  rpc_options.pb.cc  rpc_options.pb.h  status.grpc.pb.cc  status.grpc.pb.h  status.pb.cc  status.pb.h
Algo/proto/xla/: autotune_results.grpc.pb.cc  autotune_results.grpc.pb.h  autotune_results.pb.cc  autotune_results.pb.h  autotuning.grpc.pb.cc  autotuning.grpc.pb.h  autotuning.pb.cc  autotuning.pb.h  xla.grpc.pb.cc  xla.grpc.pb.h  xla.pb.cc  xla.pb.h  xla_data.grpc.pb.cc  xla_data.grpc.pb.h  xla_data.pb.cc  xla_data.pb.h
Algo/proto/xla/service/: buffer_assignment.grpc.pb.cc  buffer_assignment.grpc.pb.h  buffer_assignment.pb.cc  buffer_assignment.pb.h  hlo.grpc.pb.cc  hlo.grpc.pb.h  hlo.pb.cc  hlo.pb.h  hlo_execution_profile_data.grpc.pb.cc  hlo_execution_profile_data.grpc.pb.h  hlo_execution_profile_data.pb.cc  hlo_execution_profile_data.pb.h  hlo_profile_printer_data.grpc.pb.cc  hlo_profile_printer_data.grpc.pb.h  hlo_profile_printer_data.pb.cc  hlo_profile_printer_data.pb.h  metrics.grpc.pb.cc  metrics.grpc.pb.h  metrics.pb.cc  metrics.pb.h  test_compilation_environment.grpc.pb.cc  test_compilation_environment.grpc.pb.h  test_compilation_environment.pb.cc  test_compilation_environment.pb.h  xla_compile_result.grpc.pb.cc  xla_compile_result.grpc.pb.h  xla_compile_result.pb.cc  xla_compile_result.pb.h
Common/: GlobalStatusCommon.cpp  SaveSettingStruct.h  dbops.cpp  dbops.h  globalkeyfilter.cpp  globalkeyfilter.h  globalstatuscommon.h  httpsrequest.cpp  httpsrequest.h  jsonoperationcommon.cpp  jsonoperationcommon.h  keyboardoperation.cpp  keyboardoperation.h  logging.cpp  logging.h  mp3player.cpp  mp3player.h  primaryscreen.cpp  primaryscreen.h  qslabel.cpp  qslabel.h  screen.cpp  screen.h  snowflake.hpp
Utils/: clickablelabel.cpp  clickablelabel.h  genericutil.cpp  genericutil.h  rightclickbutton.h
View/: advancedfunction.cpp  advancedfunction.h  advancedfunction.ui  cashregisterkeyboard.cpp  cashregisterkeyboard.h  cashregisterkeyboard.ui  cashregistersetting.cpp  cashregistersetting.h  cashregistersetting.ui  collectionmoney.cpp  collectionmoney.h  collectionmoney.ui  commonsetting.cpp  commonsetting.h  commonsetting.ui  controlscreen.cpp  controlscreen.h  controlscreen.ui  keyboardmousetemplate.cpp  keyboardmousetemplate.h  keyboardmousetemplate.ui  keyboardrecordoperation.cpp  keyboardrecordoperation.h  keyboardrecordoperation.ui  miscellaneousfunction.cpp  miscellaneousfunction.h  miscellaneousfunction.ui  orderdetails.cpp  orderdetails.h  orderdetails.ui  paymentplatform.cpp  paymentplatform.h  paymentplatform.ui  playsetting.cpp  playsetting.h  playsetting.ui  remindersetting.cpp  remindersetting.h  remindersetting.ui  scancodesetting.cpp  (+2 more)
cmake/: extern_dep.cmake
test/: CMakeLists.txt  test_json.cpp  test_log.cpp  test_md5.cpp  test_onnxruntime.cpp  test_opencv.cpp  test_request.cpp  test_snowflake.cpp  test_tensorflow_server.cpp  test_text_speaker.cpp
(+168 files in other folders)
